--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello coursera!</title>
+	<title>Sba7 lkhir Nada</title>
 </head>
 <body>
-<h1>hHello coursera!</h1>
+<h1>Sba7 lkhir Nada</h1>
 </body>
 </html>
